--- a/src/Microsoft.AspNet.Identity/project.json
+++ b/src/Microsoft.AspNet.Identity/project.json
@@ -1,28 +1,28 @@
 {
-  "description": "Core implementation for ASP.NET Identity.",
-  "version": "3.0.0-*",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/aspnet/identity"
-  },
-  "dependencies": {
-    "Microsoft.AspNet.Authentication.Cookies": "1.0.0-*",
-    "Microsoft.AspNet.Cryptography.KeyDerivation": "1.0.0-*",
-    "Microsoft.AspNet.Hosting.Abstractions" : "1.0.0-*"
-  },
-  "frameworks": {
-    "dnx451": {},
-    "dnxcore50": {
-      "dependencies": {
-        "System.ComponentModel": "4.0.1-beta-*",
-        "System.Diagnostics.Debug": "4.0.11-beta-*",
-        "System.Diagnostics.Tools": "4.0.1-beta-*",
-        "System.Globalization.Extensions": "4.0.1-beta-*",
-        "System.Linq.Expressions": "4.0.11-beta-*",
-        "System.Linq.Queryable": "4.0.1-beta-*",
-        "System.Text.Encoding": "4.0.11-beta-*",
-        "System.Text.RegularExpressions": "4.0.11-beta-*"
-      }
+    "description": "Core implementation for ASP.NET Identity.",
+    "version": "3.0.0-beta8",
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/aspnet/identity"
+    },
+    "dependencies": {
+        "Microsoft.AspNet.Authentication.Cookies": "1.0.0-beta8",
+        "Microsoft.AspNet.Cryptography.KeyDerivation": "1.0.0-beta8",
+        "Microsoft.AspNet.Hosting.Abstractions": "1.0.0-beta8"
+    },
+    "frameworks": {
+        "dnx451": {},
+        "dnxcore50": {
+            "dependencies": {
+                "System.ComponentModel": "4.0.1-beta-23409",
+                "System.Diagnostics.Debug": "4.0.11-beta-23409",
+                "System.Diagnostics.Tools": "4.0.1-beta-23409",
+                "System.Globalization.Extensions": "4.0.1-beta-23409",
+                "System.Linq.Expressions": "4.0.11-beta-23409",
+                "System.Linq.Queryable": "4.0.1-beta-23409",
+                "System.Text.Encoding": "4.0.11-beta-23409",
+                "System.Text.RegularExpressions": "4.0.11-beta-23409"
+            }
+        }
     }
-  }
 }
