--- a/samples/Interop4.5/packages.config
+++ b/samples/Interop4.5/packages.config
@@ -12,15 +12,17 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNetCore.Cryptography.Internal" version="1.0.0-rc2-20459" targetFramework="net451" />
-  <package id="Microsoft.AspNetCore.DataProtection" version="1.0.0-rc2-20459" targetFramework="net451" />
-  <package id="Microsoft.AspNetCore.DataProtection.Abstractions" version="1.0.0-rc2-20459" targetFramework="net451" />
+  <package id="Microsoft.AspNetCore.Cryptography.Internal" version="1.0.0-rc3-20677" targetFramework="net451" />
+  <package id="Microsoft.AspNetCore.DataProtection" version="1.0.0-rc3-20677" targetFramework="net451" />
+  <package id="Microsoft.AspNetCore.DataProtection.Abstractions" version="1.0.0-rc3-20677" targetFramework="net451" />
+  <package id="Microsoft.AspNetCore.DataProtection.Extensions" version="1.0.0-rc3-20677" targetFramework="net451" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net45" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.0.0-rc2-20459" targetFramework="net451" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="1.0.0-rc2-20459" targetFramework="net451" />
-  <package id="Microsoft.Extensions.Options" version="1.0.0-rc2-20459" targetFramework="net451" />
-  <package id="Microsoft.Extensions.PlatformAbstractions" version="1.0.0-rc2-20459" targetFramework="net451" />
-  <package id="Microsoft.Extensions.Primitives" version="1.0.0-rc2-20459" targetFramework="net451" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="1.0.0-rc3-20677" targetFramework="net451" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.0.0-rc3-20677" targetFramework="net451" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="1.0.0-rc3-20677" targetFramework="net451" />
+  <package id="Microsoft.Extensions.Options" version="1.0.0-rc3-20677" targetFramework="net451" />
+  <package id="Microsoft.Extensions.PlatformAbstractions" version="1.0.0-rc3-20677" targetFramework="net451" />
+  <package id="Microsoft.Extensions.Primitives" version="1.0.0-rc3-20677" targetFramework="net451" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
@@ -29,6 +31,7 @@
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Facebook" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Google" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.Interop" version="1.0.0-rc3-20677" targetFramework="net451" />
   <package id="Microsoft.Owin.Security.MicrosoftAccount" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net45" />
@@ -37,18 +40,19 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
-  <package id="System.Collections" version="4.0.11-rc2-23931" targetFramework="net451" />
-  <package id="System.Collections.Concurrent" version="4.0.12-rc2-23931" targetFramework="net451" />
-  <package id="System.ComponentModel" version="4.0.1-rc2-23931" targetFramework="net451" />
-  <package id="System.Diagnostics.Debug" version="4.0.11-rc2-23931" targetFramework="net451" />
-  <package id="System.Globalization" version="4.0.11-rc2-23931" targetFramework="net451" />
-  <package id="System.Linq" version="4.1.0-rc2-23931" targetFramework="net451" />
-  <package id="System.Linq.Expressions" version="4.0.11-rc2-23931" targetFramework="net451" />
-  <package id="System.Reflection" version="4.1.0-rc2-23931" targetFramework="net451" />
-  <package id="System.Resources.ResourceManager" version="4.0.1-rc2-23931" targetFramework="net451" />
-  <package id="System.Runtime" version="4.1.0-rc2-23931" targetFramework="net451" />
-  <package id="System.Runtime.Extensions" version="4.1.0-rc2-23931" targetFramework="net451" />
-  <package id="System.Runtime.InteropServices" version="4.1.0-rc2-23931" targetFramework="net451" />
-  <package id="System.Threading" version="4.0.11-rc2-23931" targetFramework="net451" />
+  <package id="System.Collections" version="4.0.11-rc2-24018" targetFramework="net451" />
+  <package id="System.Collections.Concurrent" version="4.0.12-rc2-24018" targetFramework="net451" />
+  <package id="System.ComponentModel" version="4.0.1-rc2-24018" targetFramework="net451" />
+  <package id="System.Diagnostics.Debug" version="4.0.11-rc2-24018" targetFramework="net451" />
+  <package id="System.Globalization" version="4.0.11-rc2-24018" targetFramework="net451" />
+  <package id="System.Linq" version="4.1.0-rc2-24018" targetFramework="net451" />
+  <package id="System.Linq.Expressions" version="4.0.11-rc2-24018" targetFramework="net451" />
+  <package id="System.Reflection" version="4.1.0-rc2-24018" targetFramework="net451" />
+  <package id="System.Resources.ResourceManager" version="4.0.1-rc2-24018" targetFramework="net451" />
+  <package id="System.Runtime" version="4.1.0-rc2-24018" targetFramework="net451" />
+  <package id="System.Runtime.Extensions" version="4.1.0-rc2-24018" targetFramework="net451" />
+  <package id="System.Runtime.InteropServices" version="4.1.0-rc2-24018" targetFramework="net451" />
+  <package id="System.Threading" version="4.0.11-rc2-24018" targetFramework="net451" />
+  <package id="System.Threading.Tasks" version="4.0.11-rc2-24018" targetFramework="net451" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
