--- a/src/Microsoft.AspNet.Identity.CoreCompat/project.json
+++ b/src/Microsoft.AspNet.Identity.CoreCompat/project.json
@@ -13,7 +13,10 @@
     "membership"
   ],
   "dependencies": {
-    "Microsoft.AspNet.Identity.EntityFramework": "2.2.1"
+    "Microsoft.AspNet.Identity.EntityFramework": "2.2.1",
+    "Microsoft.AspNet.DataProtection.Extensions": "1.0.0-*",
+    "Microsoft.Owin.Security.Cookies": "3.0.1",
+    "Microsoft.Owin.Security.Interop": "1.0.0-*"
   },
   "frameworks": {
     "net451": {
