--- a/src/Microsoft.AspNetCore.Identity/project.json
+++ b/src/Microsoft.AspNetCore.Identity/project.json
@@ -1,6 +1,6 @@
 {
   "description": "ASP.NET Core Identity is the membership system for building ASP.NET Core web applications, including membership, login, and user data. ASP.NET Core Identity allows you to add login features to your application and makes it easy to customize data about the logged in user.",
-  "version": "1.0.0-*",
+  "version": "1.0.0-rc2-final",
   "buildOptions": {
     "warningsAsErrors": true,
     "keyFile": "../../tools/Key.snk",
@@ -21,15 +21,15 @@
     ]
   },
   "dependencies": {
-    "Microsoft.AspNetCore.Authentication.Cookies": "1.0.0-*",
-    "Microsoft.AspNetCore.Cryptography.KeyDerivation": "1.0.0-*",
-    "Microsoft.AspNetCore.Hosting.Abstractions": "1.0.0-*"
+    "Microsoft.AspNetCore.Authentication.Cookies": "1.0.0-rc2-final",
+    "Microsoft.AspNetCore.Cryptography.KeyDerivation": "1.0.0-rc2-final",
+    "Microsoft.AspNetCore.Hosting.Abstractions": "1.0.0-rc2-final"
   },
   "frameworks": {
     "net451": {},
     "netstandard1.3": {
       "dependencies": {
-        "System.Text.RegularExpressions": "4.0.12-*"
+        "System.Text.RegularExpressions": "4.0.12-rc2-24027"
       },
       "imports": [
         "portable-net451+win8"
