--- a/src/Microsoft.AspNet.Identity.AspNetCoreCompat/project.json
+++ b/src/Microsoft.AspNet.Identity.AspNetCoreCompat/project.json
@@ -1,9 +1,11 @@
 {
-  "version": "0.1.0-*",
+  "version": "0.1.0",
   "buildOptions": {
     "warningsAsErrors": true,
     "keyFile": "../../tools/Key.snk",
-    "nowarn": [ "CS1591" ],
+    "nowarn": [
+      "CS1591"
+    ],
     "xmlDoc": true
   },
   "description": "A compatibility layer for sharing identity databases between Microsoft.AspNet.Identity.EntityFramework and Microsoft.AspNetCore.Identity.EntityFrameworkCore",
@@ -20,9 +22,9 @@
   },
   "dependencies": {
     "Microsoft.AspNet.Identity.EntityFramework": "2.2.1",
-    "Microsoft.AspNet.DataProtection.Extensions": "1.0.0-*",
+    "Microsoft.AspNet.DataProtection.Extensions": "1.0.0-rc1-final",
     "Microsoft.Owin.Security.Cookies": "3.0.1",
-    "Microsoft.Owin.Security.Interop": "1.0.0-*"
+    "Microsoft.Owin.Security.Interop": "1.0.0"
   },
   "frameworks": {
     "net451": {
