--- a/src/Microsoft.AspNetCore.Identity.EntityFrameworkCore/project.json
+++ b/src/Microsoft.AspNetCore.Identity.EntityFrameworkCore/project.json
@@ -1,6 +1,6 @@
 {
   "description": "ASP.NET Core Identity provider that uses Entity Framework Core.",
-  "version": "1.0.0-*",
+  "version": "1.0.0",
   "buildOptions": {
     "warningsAsErrors": true,
     "keyFile": "../../tools/Key.snk",
@@ -22,14 +22,14 @@
     ]
   },
   "dependencies": {
-    "Microsoft.AspNetCore.Identity": "1.0.0-*",
-    "Microsoft.EntityFrameworkCore.Relational": "1.0.0-*"
+    "Microsoft.AspNetCore.Identity": "1.0.0",
+    "Microsoft.EntityFrameworkCore.Relational": "1.0.0"
   },
   "frameworks": {
     "net451": {},
     "netstandard1.3": {
       "dependencies": {
-        "System.ComponentModel.TypeConverter": "4.1.0-*"
+        "System.ComponentModel.TypeConverter": "4.1.0"
       }
     }
   }
