--- a/src/Microsoft.AspNetCore.Identity.EntityFramework6/project.json
+++ b/src/Microsoft.AspNetCore.Identity.EntityFramework6/project.json
@@ -21,10 +21,7 @@
 
   "dependencies": {
     "EntityFramework": "6.1.3",
-    "Microsoft.AspNetCore.Identity": {
-      "version": "1.0.0",
-      "target": "package"
-    }
+    "Microsoft.AspNetCore.Identity": "1.1.0-*"
   },
 
   "frameworks": {
