--- a/src/Microsoft.AspNetCore.Identity.EntityFrameworkCore/project.json
+++ b/src/Microsoft.AspNetCore.Identity.EntityFrameworkCore/project.json
@@ -20,7 +20,11 @@
   },
   "dependencies": {
     "Microsoft.AspNetCore.Identity": "1.1.0-*",
-    "Microsoft.EntityFrameworkCore.Relational": "1.1.0-*"
+    "Microsoft.EntityFrameworkCore.Relational": "1.1.0-*",
+    "Microsoft.Extensions.TaskCache.Sources": {
+      "version": "1.1.0-*",
+      "type": "build"
+    }
   },
   "frameworks": {
     "net451": {},
