--- a/src/Microsoft.AspNetCore.Identity/project.json
+++ b/src/Microsoft.AspNetCore.Identity/project.json
@@ -20,7 +20,11 @@
   "dependencies": {
     "Microsoft.AspNetCore.Authentication.Cookies": "1.1.0-*",
     "Microsoft.AspNetCore.Cryptography.KeyDerivation": "1.1.0-*",
-    "Microsoft.AspNetCore.Hosting.Abstractions": "1.1.0-*"
+    "Microsoft.AspNetCore.Hosting.Abstractions": "1.1.0-*",
+    "Microsoft.Extensions.TaskCache.Sources": {
+      "version": "1.1.0-*",
+      "type": "build"
+    }
   },
   "frameworks": {
     "net451": {},
