--- a/src/LinqToDB.Identity/project.json
+++ b/src/LinqToDB.Identity/project.json
@@ -9,30 +9,32 @@
   "packOptions": {
     "repository": {
       "type": "git",
-      "url": "git://github.com/aspnet/identity"
+      "url": "git://github.com/ili/LinqToDB.Identity"
     },
     "tags": [
       "aspnetcore",
-      "entityframeworkcore",
+      "linq2db",
       "identity",
-      "membership"
+			"membership",
+			"LinqToDB"
     ]
   },
   "dependencies": {
     "Microsoft.AspNetCore.Identity": "1.1.0-*",
-    "Microsoft.EntityFrameworkCore.Relational": "1.1.0-*",
     "Microsoft.Extensions.TaskCache.Sources": {
       "version": "1.1.0-*",
       "type": "build"
     },
-    "NETStandard.Library": "1.6.1-*"
+			"NETStandard.Library": "1.6.1-*",
+			"linq2db.core": "1.7.5-*",
+			"Microsoft.Extensions.DependencyInjection": "1.1.0-preview2-22514" 
   },
   "frameworks": {
-    "net451": {},
-    "netstandard1.3": {
-      "dependencies": {
-        "System.ComponentModel.TypeConverter": "4.3.0-*"
-      }
-    }
+			"netstandard1.6": {
+				"dependencies": {
+					"System.ComponentModel.TypeConverter": "4.3.0-*"
+				}
+			},
+			"net451": {}
   }
 }
