--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,10 +17,10 @@ assembly_info:
   assembly_file_version: '{version}'
   assembly_informational_version: '{version}'
 
-services:
-- mssql2012sp1
-- mysql
-- postgresql
+#services:
+#- mssql2012sp1
+#- mysql
+#- postgresql
 
 before_build:
 - cmd: dotnet restore 
@@ -32,7 +32,16 @@ build:
 after_build:
 - cmd: dotnet pack --no-build src/LinqToDB.Identity/project.json --version-suffix=beta%APPVEYOR_BUILD_NUMBER% -c=Release
 
-test:
+test_script:
+- ps: |
+    dotnet test tests\Microsoft.AspNetCore.Identity.EntityFrameworkCore.Test -c Release -f netcoreapp1.0 
+    # upload results to AppVeyor
+    $wc = New-Object 'System.Net.WebClient'
+    $wc.UploadFile("https://ci.appveyor.com/api/testresults/xunit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\TestResult.xml))
+    dotnet test tests\Microsoft.AspNetCore.Identity.EntityFrameworkCore.InMemory.Test -c Release -f netcoreapp1.0 
+    # upload results to AppVeyor
+    $wc = New-Object 'System.Net.WebClient'
+    $wc.UploadFile("https://ci.appveyor.com/api/testresults/xunit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\TestResult.xml))
 
 artifacts:
 - path: src\**\*.nupkg
