--- a/appveyor.yml
+++ b/appveyor.yml
@@ -42,13 +42,16 @@ test_script:
     Write-Host "Connection string"
     Write-Host $([Environment]::GetEnvironmentVariable("Test:SqlServer:DefaultConnectionString"))
     dotnet test test\Microsoft.AspNetCore.Identity.EntityFrameworkCore.Test -c Release -f netcoreapp1.0 
+    $test1res = $LASTEXITCODE 
     # upload results to AppVeyor
-    $wc = New-Object 'System.Net.WebClient'
+    #$wc = New-Object 'System.Net.WebClient'
     #$wc.UploadFile("https://ci.appveyor.com/api/testresults/xunit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\TestResult.xml))
     dotnet test test\Microsoft.AspNetCore.Identity.EntityFrameworkCore.InMemory.Test -c Release -f netcoreapp1.0 
+    $test2res = $LASTEXITCODE 
     # upload results to AppVeyor
-    $wc = New-Object 'System.Net.WebClient'
+    #$wc = New-Object 'System.Net.WebClient'
     #$wc.UploadFile("https://ci.appveyor.com/api/testresults/xunit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\TestResult.xml))
+    IF ($test1res -ne 0 -or $test2res -ne 0) {$host.SetShouldExit($LASTEXITCODE)}
 
 artifacts:
 - path: src\**\*.nupkg
