--- a/src/Microsoft.AspNetCore.Identity.EntityFrameworkCore/project.json
+++ b/src/Microsoft.AspNetCore.Identity.EntityFrameworkCore/project.json
@@ -1,6 +1,6 @@
 {
   "description": "ASP.NET Core Identity provider that uses Entity Framework Core.",
-  "version": "1.1.0-*",
+  "version": "1.1.0",
   "buildOptions": {
     "warningsAsErrors": true,
     "keyFile": "../../tools/Key.snk",
@@ -19,19 +19,19 @@
     ]
   },
   "dependencies": {
-    "Microsoft.AspNetCore.Identity": "1.1.0-*",
-    "Microsoft.EntityFrameworkCore.Relational": "1.1.0-*",
+    "Microsoft.AspNetCore.Identity": "1.1.0",
+    "Microsoft.EntityFrameworkCore.Relational": "1.1.0",
     "Microsoft.Extensions.TaskCache.Sources": {
-      "version": "1.1.0-*",
+      "version": "1.1.0-rtm-22752",
       "type": "build"
     },
-    "NETStandard.Library": "1.6.1-*"
+    "NETStandard.Library": "1.6.1"
   },
   "frameworks": {
     "net451": {},
     "netstandard1.3": {
       "dependencies": {
-        "System.ComponentModel.TypeConverter": "4.3.0-*"
+        "System.ComponentModel.TypeConverter": "4.3.0"
       }
     }
   }
